Lesson 8: changed by comments 2
