# app/Http/Controllers/Api/ProductApiController.php
@@ -2,10 +2,11 @@
 
 namespace App\Http\Controllers\Api;
 use App\Http\Controllers\Controller;
-use App\Http\Resources\ListCatalogResources;
-use App\Http\Resources\ProductResources;
+use App\Http\Resources\ListProductResource;
+use App\Http\Resources\DetailedProductResource;
 use Vyuldashev\LaravelOpenApi\Attributes as OpenApi;
-use App\OpenApi\Parameters\ProductParameters;
+use App\OpenApi\Parameters\ProductsListParameters;
+use App\OpenApi\Parameters\ProductDetailsParameters;
 use App\OpenApi\Responses\ProductsListResponse;
 use App\OpenApi\Responses\ErrorValidationResponse;
 use Illuminate\Http\Request;
@@ -27,7 +28,7 @@ class ProductApiController extends Controller
     #[OpenApi\Operation(tags: ["catalog"])]
     #[OpenApi\Response(factory: ProductsListResponse::class, statusCode: 200)]
     #[OpenApi\Response(factory: ErrorCatalogResponse::class, statusCode: 422)]
-    #[OpenApi\Parameters(factory: ProductParameters::class)]
+    #[OpenApi\Parameters(factory: ProductsListParameters::class)]
     public function index(Request $request) {
         $slug = $request->query('category_slug');
         $query = ProductCategory::query()->with('children', 'products');
@@ -51,7 +52,7 @@ class ProductApiController extends Controller
             ], 422);
         }
 
-        return ListCatalogResources::collection($products);
+        return ListProductResource::collection($products);
     }
     /**
      * Returning a product resource by the requested slug
@@ -61,10 +62,10 @@ class ProductApiController extends Controller
     #[OpenApi\Operation(tags: ["catalog"])]
     #[OpenApi\Response(factory: ProductResponse::class, statusCode: 200)]
     #[OpenApi\Response(factory: NotFoundResponse::class, statusCode: 404)]
-    #[OpenApi\Parameters(factory: ProductParameters::class)]
+    #[OpenApi\Parameters(factory: ProductDetailsParameters::class)]
     public function show(Request $request) {
-        $slug = $request->query('category_slug');
-        return new ProductResources(
+        $slug = $request->query('product_slug');
+        return new DetailedProductResource(
             Product::query()
                 ->with('productCategory', 'sortedAttributeValues.productAttribute')
                 ->where('slug', $slug)
